--- a/academy_cinemas.html
+++ b/academy_cinemas.html
@@ -133,6 +133,10 @@
       </div>
       <!--/jumbotron heading-->
 
+      <!--movie deals-->
+
+      <!--/movie deals-->
+
       <!--form modal-->
       <div class="modal" tabindex="-1" role="dialog" id="register">
         <div class="modal-dialog" role="document">
