--- a/academy_cinemas.html
+++ b/academy_cinemas.html
@@ -79,7 +79,10 @@
 <div id="showtimes"></div>      
         <div class="card-deck">
           <div class="card">
-            <img class="card-img-top img-fluid" src="./Img/beautyandthebeast.jpg" alt="Movie poster">
+            <figure class="figure">
+            <img class="figure-img card-img-top img-fluid rounded" src="./Img/beautyandthebeast.jpg" alt="Movie poster">
+            <figcaption class="figure-caption">Beauty and the Beast</figcaption>
+            </figure>
             <div class="card-body">
               <h5 class="card-title">Beauty and the Beast</h5>
               <p class="card-text">A selfish prince is cursed to become a monster for the rest of his life, unless he learns to fall in love with a woman he keeps as prisoner.</p>
